--- a/index.html
+++ b/index.html
@@ -1,12 +1,31 @@
+
 <!doctype html>
 <html lang="zh-CN">
   <head>
     <meta charset="UTF-8" />
+    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>角色资产进度看板</title>
+    
+    <!-- 关键修改：在这里引入 Tailwind CDN 脚本 -->
     <script src="https://cdn.tailwindcss.com"></script>
+    
+    <!-- 保持基础配置，防止 JS 加载前的样式混乱 -->
+    <script>
+      tailwind.config = {
+        theme: {
+          extend: {}
+        }
+      }
+    </script>
+    <style>
+      body { 
+        margin: 0; 
+        background-color: #f8fafc; 
+      }
+    </style>
   </head>
-  <body class="bg-slate-50">
+  <body>
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
